letter spacing and hyphenation fix

--- a/components/block-hero/sass/_block-hero.scss
+++ b/components/block-hero/sass/_block-hero.scss
@@ -91,7 +91,7 @@
 			@include media-breakpoint-up(lg) {
 				@include primary-text-color();
 				width: auto;
-				padding: 0 116px 0 68px;
+				padding: 0 100px 0 60px;
 			}
 
 			h1, h2 {
