--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -28,7 +28,10 @@ h1,
     margin: 0 0 24px;
     font-family: $font-tondu;
     text-transform: uppercase;
-    letter-spacing: 1.34px;
+    // letter-spacing: 1.34px;
+    letter-spacing: .05em;
+    hyphens: auto;
+    word-break: break-word;
     @include primary-color-text();
 }
 
